--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Day01Library\Common.csproj" />
+  </ItemGroup>
+
 </Project>
