--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Day01Library\Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Using Include="Common" />
+  </ItemGroup>
+
 </Project>
